--- a/styles/_components.css
+++ b/styles/_components.css
@@ -3,6 +3,7 @@
 .left-container {
     min-width: 10rem;
     height: 100%;
+    overflow: hidden;
     border-top-left-radius: 2rem;
     border-bottom-left-radius: 2rem;
     background-color: var(--color-white);
@@ -12,16 +13,23 @@
     width: 80vw;
     height: 100%;
     padding: 1.5rem;
-    overflow: scroll;
+    overflow: hidden;
+    overflow-y: scroll;
     background-color: #eff6ff;
 }
 
 .right-container {
     min-width: 45rem;
     height: 100%;
+    overflow: hidden;
     border-top-right-radius: 2rem;
     border-bottom-right-radius: 2rem;
     background-color: var(--color-white);
+}
+
+.right-container-scroll {
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .grid-container {
@@ -80,6 +88,11 @@
     background-color: var(--color-white);
 }
 
+.active-quiz {
+    background-color: #eff6ff;
+    box-shadow: var(--shadow);
+}
+
 .search-bar {
     width: 40%;
     padding: 0.8rem 1.2rem;
@@ -93,6 +106,10 @@
     border-style: none;
     outline-style: none;
     background-color: #eff6ff;
+}
+
+.custom-margin {
+    margin-top: 4rem;
 }
 
 .app-name {
@@ -111,6 +128,34 @@
     width: 100%;
     height: 20rem;
     object-fit: cover;
+}
+
+.progress-bar {
+    width: 100%;
+}
+
+.option {
+    margin: 0 1rem;
+    padding: 0.5rem 1.2rem;
+    border-radius: 1rem;
+    cursor: pointer;
+    border: 2px solid royalblue;
+}
+
+.option-correct {
+    background-color: #dbeafe;
+}
+
+.option-wrong {
+    background-color: #fee2e2;
+}
+
+.option-correct-icon {
+    color: green;
+}
+
+.option-wrong-icon {
+    color: red;
 }
 
 .parent-container {
